# R-type-video-game

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bash  build.sh  build_executables_linux.sh  build_executables_windows_10.ps1  clean_repo.bash  clean_repo.sh  conanfile.txt  install_requirements_to_build_SFML_on_fedora.sh  r-type_server
client/: CMakeLists.txt
client/lib/my_sfml_character/: CMakeLists.txt  Character.cpp  Character.hpp  setOriginMiddle.cpp
client/lib/my_sfml_cinematic/: CMakeLists.txt  Cinematic.cpp  Cinematic.hpp
client/srcs/: Background.cpp  Background.hpp  GameEngine.cpp  GameEngine.hpp  GraphicWrapper.cpp  GraphicWrapper.hpp  IGraphicWrapper.hpp  NetworkManager.cpp  NetworkManager.hpp  Player.hpp  PlayerBoard.cpp  PlayerBoard.hpp  Player_pos.cpp  main.cpp
documentation/: RFC_protocol_rtype.txt
lib/my_sfml_character/: CMakeLists.txt  Character.cpp  Character.hpp  CharacterGraphic.hpp  CreateSpriteFromPath.cpp
lib/uti/graph/: Dijkstra.hpp  Graph.hpp  test_result_libgraph
lib/uti/my_network/: CMakeLists.txt  ClientTcpAsyncWrapper.hpp  ClientUdpMultiThreadWrapper.cpp  ClientUdpMultiThreadWrapper.hpp  ClientWrapper.cpp  ClientWrapper.hpp  IClientTcpAsyncWrapper.hpp  IClientUdpMultiThreadWrapper.hpp  IClientWrapper.hpp  IServerUdpMultiThreadWrapper.hpp  IServerWrapper.hpp  ServerTcpAsyncWrapper.cpp  ServerTcpAsyncWrapper.hpp  ServerUdpMultiThreadWrapper.cpp  ServerUdpMultiThreadWrapper.hpp  ServerWrapper.cpp  ServerWrapper.hpp  client.cpp  serv.cpp
lib/uti/my_network/Async/: ClientTcpAsyncWrapper.cpp  IServerTcpAsyncWrapper.hpp  ServerTcpAsyncWrapper.hpp
lib/uti/my_network/BlockingMultiThread/: ClientUdpMultiThreadWrapper.cpp  ServerUdpMultiThreadWrapper.cpp  ServerUdpMultiThreadWrapper.hpp
lib/uti/my_network/tests/: CMakeLists.txt  test_10_msgs.sh  test_1_network_server_client_multiple_messages.sh
lib/uti/my_network/tests/test_1_source_code/: client.cpp  clientUdp.cpp  serv.cpp  servUdp.cpp
lib/uti/my_prog_args/: MyProgArgs.hpp
lib/uti/my_prog_args/tests/: testProgArgs.cpp
lib/uti/my_string/: MyStrTok.hpp
lib/uti/my_string/tests/: testMyStrTok.cpp
script/: download_all_conan_prebuilt_packages_sfml.sh  install_requirements_to_build_SFML_on_fedora.sh
server/: CMakeLists.txt
server/srcs/: GameInfo.cpp  GameInfo.hpp  Player.hpp  ProtocolHandler.cpp  ProtocolHandler.hpp  main.cpp
srcs/: Background.cpp  Background.hpp  Graphic.cpp  Graphic.hpp  GraphicWrapper.cpp  GraphicWrapper.hpp  IGraphicWrapper.hpp  background.cpp  background.hpp  main.cpp
